fix ItemBuilder placeholders